# mock-collector

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  flake.nix  justfile  release-plz.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  monthly-release.yml  release-plz.yml
crates/mock-collector/: CHANGELOG.md  Cargo.toml  LICENSE
crates/mock-collector/examples/: all_signals.rs  assertion_patterns.rs  async_waiting.rs  basic_grpc.rs  debugging.rs  grpc_instrumented.rs  http_instrumented.rs  logs_with_severity.rs  otel_instrumented.rs  severity_assertions.rs  shared_collector.rs
crates/mock-collector/src/: collector.rs  error.rs  lib.rs  server.rs
crates/mock-collector/tests/: integration_tests.rs
crates/otel-lambda-init/: Cargo.toml
crates/otel-lambda-init/src/: config.rs  error.rs  lib.rs
examples/: assertion_patterns.rs  basic_grpc.rs  debugging.rs  histogram_summary_assertions.rs  http_protocols.rs  metrics.rs  shared_collector.rs
src/: collector.rs  error.rs  json.rs  lib.rs  server.rs
src/collector/: assertions.rs  helpers.rs  metric_assertions.rs  mod.rs  predicates.rs  types.rs
tests/: integration_tests.rs
