[package]
name = "mock-collector"
version = "0.1.2"
edition = "2024"
authors = ["Daniel Verrall"]
rust-version = "1.91.1"
description = "Mock OpenTelemetry OTLP collector server for testing"
license = "MIT"
repository = "https://github.com/djvcom/mock-collector"
homepage = "https://github.com/djvcom/mock-collector"
documentation = "https://docs.rs/mock-collector"
keywords = ["opentelemetry", "testing", "mock", "otlp", "observability"]
categories = ["development-tools::testing"]
readme = "README.md"
exclude = [
    ".gitmodules",
    "opentelemetry-proto-examples/",
]

[dependencies]
axum = "0.8.7"
opentelemetry-otlp = "0.31.0"
opentelemetry-proto = "0.31.0"
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.17"
tonic = "0.14.2"

[dev-dependencies]
reqwest = { version = "0.12.24", features = ["json"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
