[workspace]
resolver = "2"
members = [
    "crates/mock-collector",
    "crates/otel-lambda-init",
]

[workspace.package]
edition = "2024"
authors = ["Daniel Verrall"]
rust-version = "1.91.1"
license = "MIT"
repository = "https://github.com/djvcom/mock-collector"
homepage = "https://github.com/djvcom/mock-collector"
