[package]
name = "mock-collector"
version = "0.2.5"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Mock OpenTelemetry OTLP collector server for testing"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/mock-collector"
keywords = ["opentelemetry", "testing", "mock", "otlp", "observability"]
categories = ["development-tools::testing"]
readme = "README.md"
exclude = [
    ".gitmodules",
    "opentelemetry-proto-examples/",
]

[dependencies]
axum = "0.8.7"
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["http-proto"] }
opentelemetry-proto = "0.31.0"
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.17"
tonic = "0.14.2"

[dev-dependencies]
opentelemetry = "0.31.0"
otel-lambda-init = { path = "../otel-lambda-init" }
reqwest = { version = "0.12.26", features = ["json"] }
tracing = "0.1.43"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
